--- a/views/index.njk
+++ b/views/index.njk
@@ -5,7 +5,10 @@
 {% endblock %}
 
 {% block content %}
-    <div id='calendar'></div>
+<div class="main-content" id="mainContent">
+    <div id="calendar"></div>
+    <!-- Other calendar-related content -->
+</div>
 {% endblock %}
 
 {% block footer_left %}
@@ -29,7 +32,7 @@
 {% endblock %}
 
 {% block footer_right %}
-    <button id="open-timer-modal-btn" title="Timer" onclick="toggleTimerModal()">⏱️</button>
+    <button id="open-timer-modal-btn" class="footer-icon-button" title="Timer" onclick="toggleTimerModal()">⏱️</button>
 {% endblock %}
 
 {% block scripts %}
