--- a/views/updateModal.njk
+++ b/views/updateModal.njk
@@ -3,7 +3,7 @@
   <div class="modal unselectable modal-update">
     <div class="modal-content">
       <h2>Update work log</h2>
-      <form class="modal-form" id="modal-form-update" method="PUT" action="/worklog/" onsubmit="convertFormDates(this)">
+      <form class="modal-form" id="modal-form-update" method="PUT" action="/worklog/">
         <input type="hidden" name="worklogId" value="">
         <input type="hidden" id="issue-update" name="issueId">
         <input type="hidden" id="issue-key-update" name="issueKey">
