--- a/views/sprintStats.njk
+++ b/views/sprintStats.njk
@@ -4,6 +4,10 @@
 <script src="/javascripts/plywood/stats.js" type="module"></script>
 {% endblock %}
 
+{% block scripts %}
+<script src="/javascripts/plywood/main.js" type="module"></script>
+{% endblock %}
+
 {% block content %}
 <div class="stats-page">
     <div class="stats-header">
